--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-to-print": "^2.14.12",
     "react-toastify": "^9.1.1",
     "react-window": "^1.8.8",
     "styled-components": "^5.3.6",
